@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

package util {
    class "indexed_storage<T>" as indexed_storage {
    }
}

package math {
    class vec2 {
    }
}

package assets {
    class texture_id << (D,#FF7700) typedef >>
}

package rendering {
    class sprite {
    }
}

package systems {
    class health_system {
    }
}

package combat {
    class status_effect {
    }
}

package geometry {
    class map_data {
    }
}

package engine {

    abstract class entity {
        + {abstract} update(dt : float const) : void
        + virtual ~entity()
    }

    class renderable_entity {
        + renderable_entity(p : math::vec2 const, z : float const, tex : assets::texture_id const, is : float const)
        + ~renderable_entity() override
    }

    enum faction {
        player
        enemy
        neutral
    }

    class actor {
        # health : systems::health_system
        # movement_speed : float
        # team : faction
        + actor(p : math::vec2 const, z : float const, tex : assets::texture_id const, is : float const, hp : float const, shield : float const, move_speed : float const, this_team : faction const)
        + virtual take_damage(dmg : float const) : void
        + virtual take_true_damage(dmg : float const) : void
        + virtual heal(amount : float const) : void
        + virtual add_shield(amount : float const) : void
        + virtual add_effect(effect : std::unique_ptr<combat::status_effect>) : void
        + is_dead() : bool const
        + update(dt : float) : void override
        -- Friends --
        friend class combat::charmed
        friend class combat::slowed
        friend class game::game
        friend class projectile
    }

    class projectile {
        # direction : math::vec2
        # speed : float
        # damage : float
        # lifetime : float
        # hit_radius : float
        # team : faction
        # on_hit_effect : std::function<std::unique_ptr<combat::status_effect>()>
        # world_ref : world*
        # map_ref : geometry::map_data*
        # self_id : util::indexed_storage<std::unique_ptr<entity>>::id_t
        + projectile(pos : math::vec2, z : float, tex : assets::texture_id, scale : float, dir : math::vec2, spd : float, dmg : float, life : float, f : faction, radius : float = 8.0f)
        + update(dt : float) : void override
        -- Friends --
        friend class game::game
        friend class combat::weapons::projectile_firing_mode
        friend class entities::monster
        friend class entities::monster_boss
    }

    class world {
        - entities : util::indexed_storage<std::unique_ptr<entity>>
        - deleted_entities : std::vector<util::indexed_storage<std::unique_ptr<entity>>::id_t>
        + world()
        + world(const world&) = delete
        + operator=(const world&) = delete
        + update(dt : float const) : void
        + operator[](id : util::indexed_storage<std::unique_ptr<entity>>::id_t const) : entity&
        + operator[](id : util::indexed_storage<std::unique_ptr<entity>>::id_t const) : entity const& const
        + get_entities() : util::indexed_storage<std::unique_ptr<entity>> const&
        + register_entity(e : std::unique_ptr<entity>) : util::indexed_storage<std::unique_ptr<entity>>::id_t
        + delete_entity(id : util::indexed_storage<std::unique_ptr<entity>>::id_t const) : void
        + entity_from_id(id : util::indexed_storage<std::unique_ptr<entity>>::id_t const) : entity* const
    }
}

'' Inheritance
rendering::sprite <|-- engine::renderable_entity
engine::entity <|-- engine::renderable_entity
engine::renderable_entity <|-- engine::actor
engine::renderable_entity <|-- engine::projectile

'' Dependencies
engine::actor ..> systems::health_system
engine::actor ..> combat::status_effect
engine::actor ..> math::vec2
engine::projectile ..> math::vec2
engine::projectile ..> geometry::map_data
engine::world ..> util::indexed_storage
engine::world ..> engine::entity

@enduml
